examples/test-ingressroute-related.yaml
---
# Test setup for IngressRoute with related resources
apiVersion: v1
kind: Namespace
metadata:
  name: traefik-test
---
# Service to be referenced
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: traefik-test
spec:
  selector:
    app: test
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
# Middleware to be referenced
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-middleware
  namespace: traefik-test
spec:
  addHeaders:
    request:
      headers:
        X-Custom-Header: "Test"
---
# IngressRoute with all related resources
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: test-ingressroute-with-relations
  namespace: traefik-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`test.example.com`)
      kind: Rule
      services:
        - name: test-service
          port: 80
          kind: Service
      middlewares:
        - test-middleware
  tls:
    secretName: test-tls-secret
    options:
      name: test-tlsoption
      namespace: traefik-test
    store:
      name: test-tlsstore
      namespace: traefik-test
    certResolver: letsencrypt
    domains:
      - main: test.example.com
        sans:
          - "*.test.example.com"
